# NotioNLPToolkit

./: .gitignore  .replit  NotioNLPToolkit.ipynb  README.md  launch.sh  pyproject.toml
configs/: example.toml  jupyter.toml  notion_nlp.toml  streamlit.toml
demo/: main_demo.ipynb  streamlit_app.py
examples/: basic_usage.py  check_access.py  setup_test_data.py  test_functionality.py
notion_nlp/: __init__.py  exceptions.py  hierarchy.py  models.py  notion_client.py  tags.py  text_processor.py
tests/: test_hierarchy.py  test_notion_client.py  test_tags.py  test_text_processor.py
