[project]
name = "notion-nlp"
version = "0.1.0"
description = "A Python library for processing Notion documents with NLP capabilities and hierarchical organization"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "notebook>=7.3.2",
    "notion-client>=2.3.0",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "spacy>=3.8.4",
    "streamlit>=1.42.0",
    "trafilatura>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
